added generated spring-boot app
